--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
 title: Vtor's Blog
-description: >- # this means to ignore newlines until "baseurl:"
+description: >- 
   A collection of things to learn and teach.
   <br/>Mostly game development and programming.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Vtor_
 plugins:
   - jekyll-remote-theme
